
        * Fix slashing problems for Windows.  Thanks Olivier Mengué.

        * Complains about extra unparsed options to try to detect
        problems that come out of misquoted variables. Thanks to Gunnar Wolf.

        * The list of files to ignore is now called ignore.txt,
        which you can turn into .cvsignore, .gitignore, MANIFEST.SKIP
        or whatever.


1.50    Tue Oct 28 00:27:37 CDT 2008
        * Added Perl Training Australia's getting-started.html

        * Add license setting to default Makefile.PL output (Thanks, Gabor!)

        * Fixed the RT link in the boilerplate. (Thanks, Shlomi)


1.46    Fri Nov  9 18:36 America/New_York 2007
        [ENHANCEMENTS]
        * add Module::Install compat for ::Template plugin
        * boilerplate.t no longer appears in default MANIFEST
        * META.yml no longer appears in default MANIFEST

        [FIXES]
        * undo some bugs introduced by changing API of subclassable "guts"
          methods
        * remove some duplicated code

1.46    Wed Oct 31 08:49 America/New_York 2007
        * put nearly all of the module-starter program into a module (to test)
        * add license to META.yml

1.44    Sun Oct 11 19:09 America/New_York 2007
        * no changes since 1.43_03

1.43_03
        [FIXES]
        * pod-coverage.t includes Pod::Coverage version check
        * Test::Pod and Test::Pod::Coverage are now requirements.
            Thanks, David Golden.

1.43_02 Wed Apr 25 09:37-Wed May 09 14:46 PDT 2007	<cjac@colliertech.org>
        [ENHANCEMENTS]
        * broke Module::Starter::Simple's README_guts and module_guts
          methods into smaller, override-able pieces
        * re-factored Module::Starter::Simple's build system; the
          build metadata now lives in Module::Starter::BuildSet.  This
          allows us access to the metadata from the test suite.  It
          also makes it a bit easier to add supported builders.