@@ -12,6 +12,14 @@ NEXT
         which you can turn into .cvsignore, .gitignore, MANIFEST.SKIP
         or whatever.
 
+        * Handles authors with apostrophes in their names better.
+        Thanks to, not surprisingly, Dave O'Neill.
+
+        * Removed module requirements on Test::Pod and Test::Pod::Coverage
+        for Module::Starter to be built and installed.  However,
+        t/pod.t and t/pod-coverage.t do still both get created even
+        if either of their two main modules are not installed.
+
 
 1.50    Tue Oct 28 00:27:37 CDT 2008
         * Added Perl Training Australia's getting-started.html
